--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.5",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
