--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tsparticles": "^2.12.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsparticles": "^3.4.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
